--- a/templates/base.html
+++ b/templates/base.html
@@ -1,80 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';">
+        <!-- Primary Meta Tags -->
+        <title>{% block title %}Philippine Zipcodes - Complete Postal Code
+            Directory{% endblock %}</title>
+        <meta name="description"
+            content="{% block description %}Official Philippine postal codes directory. Search zip codes by city, municipality, province, or region. Updated postal codes from PHLPost.{% endblock %}">
+        <meta name="keywords"
+            content="philippines postal code, zip code finder, philippine address, postal code directory, philippine cities, municipality codes, PHLPost, {% block keywords %}{% endblock %}">
 
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
-    <link rel="canonical" href="https://phzipcodes.com{{ request.path }}">
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url"
+            content="https://phzipcodes.com{{ request.path }}">
+        <meta property="og:title"
+            content="{% block og_title %}Philippine Zipcodes{% endblock %}">
+        <meta property="og:description"
+            content="{% block og_description %}Find Philippine postal codes easily{% endblock %}">
+        <meta property="og:image"
+            content="https://phzipcodes.com/static/images/og-image.jpg">
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="{% block meta_title %}Philippine Zipcodes - Find Postal Codes{% endblock %}">
-    <meta name="description"
-        content="{% block meta_description %}Find postal codes for any location in the Philippines. Search by city, municipality, province, or region.{% endblock %}">
-    <meta name="keywords"
-        content="philippines postal code, zip code, philippine address, postal code finder, philippine cities">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url"
+            content="https://phzipcodes.com{{ request.path }}">
+        <meta name="twitter:title" content="{{ self.title() }}">
+        <meta name="twitter:description" content="{{ self.description() }}">
+        <meta name="twitter:image"
+            content="https://phzipcodes.com/static/images/og-image.jpg">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://phzipcodes.com{{ request.path }}">
-    <meta property="og:title" content="{% block og_title %}Philippine Zipcodes - Find Postal Codes{% endblock %}">
-    <meta property="og:description"
-        content="{% block og_description %}Find postal codes for any location in the Philippines. Search by city, municipality, province, or region.{% endblock %}">
-    <meta property="og:image" content="/static/images/og-image.png">
+        <!-- Canonical -->
+        <link rel="canonical" href="https://phzipcodes.com{{ request.path }}">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://phzipcodes.com{{ request.path }}">
-    <meta property="twitter:title"
-        content="{% block twitter_title %}Philippine Zipcodes - Find Postal Codes{% endblock %}">
-    <meta property="twitter:description"
-        content="{% block twitter_description %}Find postal codes for any location in the Philippines. Search by city, municipality, province, or region.{% endblock %}">
-    <meta property="twitter:image" content="/static/images/og-image.png">
+        <!-- Robots -->
+        <meta name="robots" content="index, follow">
 
-    <title>{% block title %}Philippine Zipcodes{% endblock %}</title>
+        <!-- Security -->
+        <meta http-equiv="Content-Security-Policy"
+            content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';">
 
-    <!-- Structured Data -->
-    <script type="application/ld+json">
+        <!-- Critical CSS -->
+        <link rel="preload" href="/static/css/tailwind.min.css" as="style"
+            fetchpriority="high">
+        <link href="/static/css/tailwind.min.css" rel="stylesheet">
+
+        <!-- HTMX -->
+        <link rel="preload" href="/static/js/htmx.min.js" as="script"
+            fetchpriority="high">
+        <script src="/static/js/htmx.min.js" defer></script>
+
+        <!-- JSON-LD -->
+        <script type="application/ld+json">
         {
             "@context": "https://schema.org",
-            "@type": "WebApplication",
-            "name": "Philippine Zipcodes",
-            "description": "Find postal codes for any location in the Philippines",
+            "@type": "WebSite",
+            "name": "PH Zipcodes",
             "url": "https://phzipcodes.com",
-            "applicationCategory": "Utility",
-            "operatingSystem": "All"
+            "description": "Find Philippine postal codes easily",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://phzipcodes.com/search?q={search_term_string}",
+                "query-input": "required name=search_term_string"
+            }
         }
         </script>
 
-    <!-- Scripts and Styles -->
-    <script src="/static/js/htmx.min.js" defer></script>
-    <link rel="preload" href="/static/js/htmx.min.js" as="script" fetchpriority="high">
-    <link rel="preload" href="/static/icons/magnifying-glass-light.svg" as="image" type="image/svg+xml">
-    <link rel="preload" href="/static/icons/backspace-light.svg" as="image" type="image/svg+xml">
-    <link rel="preload" href="/static/icons/map-pin.svg" as="image" type="image/svg+xml">
+        {% block head %}{% endblock %}
 
-    <link href="/static/css/tailwind.min.css" rel="stylesheet">
-    <link href="/static/css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/fonts.css">
-
-    {% block head %}{% endblock %}
-</head>
-
-<body
-    class="min-h-screen flex flex-col bg-gradient-to-b from-slate-50 via-white to-slate-50/80 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900">
-
-    {% include 'components/header.html' %}
-
-    <main role="main" class="container mx-auto px-4 py-6 lg:py-8 flex-grow">
-        {% block content %}{% endblock %}
-    </main>
-
-    {% include 'components/footer.html' %}
-    {% include 'components/back_to_top.html' %}
-</body>
-
+        <!-- Deferred CSS -->
+        <link href="/static/css/styles.css" rel="stylesheet">
+        <link href="/static/css/fonts.css" rel="stylesheet" media="print"
+            onload="this.media='all'">
+    </head>
+    <body
+        class="min-h-screen flex flex-col bg-gradient-to-b from-slate-50 via-white to-slate-50/80">
+        {% include 'components/header.html' %}
+        <main role="main" class="container mx-auto px-4 py-6 lg:py-8 flex-grow">
+            {% block content %}{% endblock %}
+        </main>
+        {% include 'components/footer.html' %}
+        {% include 'components/back_to_top.html' %}
+    </body>
 </html>
